<resources>
    <string name="app_name">Sunshine Travel</string>
    <string name="signup_google">Signup with Google</string>
    <string name="signup_facebook">Signup with Facebook</string>
    <string name="facebook_app_id">503439846867619</string>
    <string name="fb_login_protocol_scheme">fb503439846867619</string>

    <string name="font_montserrat_Bold">Montserrat-Bold.ttf</string>
    <string name="font_montserrat_Light">Montserrat-Light.ttf</string>
    <string name="font_montserrat_Regular">Montserrat-Regular.ttf</string>
    <string name="font_montserrat_SemiBold">Montserrat-SemiBold.ttf</string>

    <string name="action_logout"> Log Out</string>
    <string name="loading">Loading</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_email">Login with Email</string>
    <string name="nav_register">New to Sunshine travel ? Register</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
    <string name="signup">Register</string>
    <string name="signin">Login</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_password">Enter Password</string>
    <string name="nav_login">Already Registered ? Skip to Login</string>
    <string name="discover">DISCOVER</string>
    <string name="discover_desc">Whether it\'s coast or canyons,Victoria Falls or Antartica: we\'re sure to have an adventure tour that suits you best</string>
    <string name="enter_username">Enter Username</string>

    /* Firebase related strings and names */

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="menu">menu</string>
    <string name="destinations">Destinations</string>
    <string name="wonders_of_canada">Wonders of Canada</string>
    <string name="natural_landmarks">Natural Landmarks</string>
    <string name="pinpoint">pinpoint</string>
    <string name="reference_places">80 Places</string>
    <string name="clock">clock</string>
    <string name="reference_time">10 days</string>
    <string name="history_amp_culture"><![CDATA[History & Culture]]></string>
    <string name="treasures_of_italy">Treasures of Italy</string>
    <string name="heritage_amp_history"><![CDATA[Heritage & History]]></string>
    <string name="night_at_prague">Night at Prague</string>
    <string name="the_great_united_states">THe Great United States</string>
    <string name="san_francisco">San Francisco</string>
    <string name="tour_de_san_francisco">Tour De San Francisco</string>
    <string name="alcatraz_crusies">Alcatraz Cruises</string>
    <string name="_12_3_km">12.3 KM</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="connect">CONNECT</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="sample_email">alexander@five.agency</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sample_address">San Diego, CA, USA</string>
    <string name="location">Location</string>

    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Location</item>
        <item>Favourites</item>
        <item>WishList</item>
        <item>Profile</item>
        <item>Settings</item>
    </string-array>
</resources>
