<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.StartActivity">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_background"
        app:layout_constraintTop_toTopOf="@+id/img_background"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <com.example.sunshinetravel.CustomWidgets.CustomTextView
        android:id="@+id/static_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/discover"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontName="@string/font_montserrat_Bold"
        app:layout_constraintBottom_toTopOf="@+id/static_data"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.44" />

    <com.example.sunshinetravel.CustomWidgets.CustomTextView
        android:id="@+id/static_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/discover_desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontName="@string/font_montserrat_Regular"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_start_register"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_start_login" />

    <com.example.sunshinetravel.CustomWidgets.CustomButton
        android:id="@+id/btn_start_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rounded_rectangle"
        android:padding="15dp"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontName="@string/font_montserrat_SemiBold"
        app:layout_constraintBottom_toBottomOf="@+id/img_background"
        app:layout_constraintEnd_toEndOf="@+id/btn_start_register"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_start_register" />

    <com.example.sunshinetravel.CustomWidgets.CustomButton
        android:id="@+id/btn_start_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_rectangle"
        android:padding="15dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontName="@string/font_montserrat_SemiBold"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_login"
        app:layout_constraintEnd_toEndOf="@+id/img_background"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/img_background" />

</androidx.constraintlayout.widget.ConstraintLayout>