<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.StartActivity">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/img_background"
        app:layout_constraintTop_toTopOf="@+id/img_background"
        app:layout_constraintVertical_bias="0.110000014"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <com.example.sunshinetravel.CustomWidgets.CustomTextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:fontName="@string/font_montserrat_Bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.example.sunshinetravel.CustomWidgets.CustomEditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:background="@drawable/rounded_rectangle"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textCursorDrawable="@color/white"
        app:fontName="@string/font_montserrat_Regular"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <com.example.sunshinetravel.CustomWidgets.CustomEditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:padding="15dp"
        android:textCursorDrawable="@color/white"
        android:background="@drawable/rounded_rectangle"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:fontName="@string/font_montserrat_Regular"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edt_name"
        app:layout_constraintStart_toStartOf="@+id/edt_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <com.example.sunshinetravel.CustomWidgets.CustomEditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_mobile_no"
        android:padding="15dp"
        android:background="@drawable/rounded_rectangle"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:fontName="@string/font_montserrat_Regular"
        android:inputType="phone"
        android:textCursorDrawable="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <com.example.sunshinetravel.CustomWidgets.CustomEditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:padding="15dp"
        android:background="@drawable/rounded_rectangle"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textCursorDrawable="@color/white"
        app:fontName="@string/font_montserrat_Regular"
        app:layout_constraintEnd_toEndOf="@+id/edit_phone"
        app:layout_constraintStart_toStartOf="@+id/edit_phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

    <com.example.sunshinetravel.CustomWidgets.CustomButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rounded_rectangle"
        android:padding="15dp"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontName="@string/font_montserrat_SemiBold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintVertical_bias="0.32999998" />

    <com.example.sunshinetravel.CustomWidgets.CustomTextView
        android:id="@+id/nav_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nav_login"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:fontName="@string/font_montserrat_Bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_background"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>