<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PlacesListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/san_francisco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <com.example.sunshinetravel.CustomWidgets.CustomTextView
            android:id="@+id/san_francisco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/san_francisco"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:fontName="@string/font_montserrat_SemiBold"
            app:layout_constraintBottom_toBottomOf="@+id/imgBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="@+id/imgBack" />

        <com.example.sunshinetravel.CustomWidgets.CustomTextView
            android:id="@+id/landmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/natural_landmarks"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:fontName="@string/font_montserrat_Regular"
            app:layout_constraintEnd_toEndOf="@+id/san_francisco"
            app:layout_constraintStart_toStartOf="@+id/san_francisco"
            app:layout_constraintTop_toBottomOf="@+id/san_francisco" />

        <com.example.sunshinetravel.CustomWidgets.CustomTextView
            android:id="@+id/tour_at_glance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/tour_de_san_francisco"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:fontName="@string/font_montserrat_SemiBold"
            app:layout_constraintEnd_toEndOf="@+id/landmarks"
            app:layout_constraintStart_toStartOf="@+id/landmarks"
            app:layout_constraintTop_toBottomOf="@+id/landmarks" />

        <ImageView
            android:id="@+id/ilocation"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/pinpoint"
            app:layout_constraintStart_toStartOf="@+id/tour_at_glance"
            app:layout_constraintTop_toBottomOf="@+id/tour_at_glance"
            app:srcCompat="@drawable/pinpoint" />

        <ImageView
            android:id="@+id/iclock"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/clock"
            app:layout_constraintBottom_toBottomOf="@+id/places"
            app:layout_constraintStart_toEndOf="@+id/places"
            app:layout_constraintTop_toTopOf="@+id/places"
            app:srcCompat="@drawable/clock" />

        <com.example.sunshinetravel.CustomWidgets.CustomTextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/reference_time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:fontName="@string/font_montserrat_Regular"
            app:layout_constraintBottom_toBottomOf="@+id/places"
            app:layout_constraintEnd_toEndOf="@+id/tour_at_glance"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iclock"
            app:layout_constraintTop_toTopOf="@+id/places" />

        <com.example.sunshinetravel.CustomWidgets.CustomTextView
            android:id="@+id/places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/reference_places"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:fontName="@string/font_montserrat_Regular"
            app:layout_constraintBottom_toBottomOf="@+id/ilocation"
            app:layout_constraintStart_toEndOf="@+id/ilocation"
            app:layout_constraintTop_toTopOf="@+id/ilocation" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:id="@+id/rv_place_list"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>